--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <a class="dropdown-item" href="art.html">藝文</a>
                             <a class="dropdown-item" href="design.html">設計</a>
                             <a class="dropdown-item" href="edu.html">教育</a>
-                            <a class="dropdown-item" href="green.html">環保</a>
+                            <a class="dropdown-item" href="https://fzios210.github.io/VR360/">環保</a>
                             <a class="dropdown-item" href="charity.html">公益</a>
                         </div>
                     </li>
@@ -264,7 +264,7 @@
                         <li class="ft-li2"><a href="art.html">藝文</a></li>
                         <li class="ft-li2"><a href="design.html">設計</a></li>
                         <li class="ft-li2"><a href="edu.html">教育</a></li>
-                        <li class="ft-li2"><a href="green.html">環保</a></li>
+                        <li class="ft-li2"><a href="https://fzios210.github.io/VR360/">環保</a></li>
                         <li class="ft-li2"><a href="charity.html">公益</a></li>
                     </ul>
                 </div>
