--- a/event.html
+++ b/event.html
@@ -52,7 +52,7 @@
                             <a class="dropdown-item" href="art.html">藝文</a>
                             <a class="dropdown-item" href="design.html">設計</a>
                             <a class="dropdown-item" href="edu.html">教育</a>
-                            <a class="dropdown-item" href="green.html">環保</a>
+                            <a class="dropdown-item" href="https://fzios210.github.io/VR360/">環保</a>
                             <a class="dropdown-item" href="charity.html">公益</a>
                         </div>
                     </li>
@@ -82,7 +82,7 @@
                             <a href="#" @click="link(item.id)" v-else>
                                 <h1>{{item.title}}</h1>
                             </a>
-                            <p>{{item.content}}</p>
+                            <p style="overflow: hidden;height: 65px;">{{item.content}}</p>
                             <hr>
                             <p v-if="item.type=='text'">{{item.start_date}}-{{item.end_date}}</p>
                         </div>
@@ -120,29 +120,6 @@
                 <div class="col-lg-5 col-md-5 col-sm-5 col-12 event-pic-area">
                     <div class="event-img-div event-pic01">
                         <a href="https://5173240eyecare.github.io/eyecare/" target="_blank">
-                            <div class="news-mask">
-                                <p>閱讀更多</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-1 col-md-1 col-sm-1 col-0"></div>
-            </div>
-            <div class="row event-area">
-                <div class="col-lg-1 col-md-1 col-sm-1 col-0"></div>
-                <div class="col-lg-5 col-md-5 col-sm-5 col-12">
-                    <div class="event-content">
-                        <a href="event_01.html">
-                            <h1>護眼EYECARE</h1>
-                        </a>
-                        <p>徐元智先生紀念基金會希望透過對於文教將藝術種子散播於各個角落，打造一個真善美的社會。</p>
-                        <hr>
-                        <p>2022/08/01-2022/08/31</p>
-                    </div>
-                </div>
-                <div class="col-lg-5 col-md-5 col-sm-5 col-12 event-pic-area">
-                    <div class="event-img-div pic02">
-                        <a href="event_01.html">
                             <div class="news-mask">
                                 <p>閱讀更多</p>
                             </div>
@@ -239,7 +216,7 @@
                         <li class="ft-li2"><a href="art.html">藝文</a></li>
                         <li class="ft-li2"><a href="design.html">設計</a></li>
                         <li class="ft-li2"><a href="edu.html">教育</a></li>
-                        <li class="ft-li2"><a href="green.html">環保</a></li>
+                        <li class="ft-li2"><a href="https://fzios210.github.io/VR360/">環保</a></li>
                         <li class="ft-li2"><a href="charity.html">公益</a></li>
                     </ul>
                 </div>
