--- a/event_01.html
+++ b/event_01.html
@@ -72,7 +72,7 @@
                             <a class="dropdown-item" href="art.html">藝文</a>
                             <a class="dropdown-item" href="design.html">設計</a>
                             <a class="dropdown-item" href="edu.html">教育</a>
-                            <a class="dropdown-item" href="green.html">環保</a>
+                            <a class="dropdown-item" href="https://fzios210.github.io/VR360/">環保</a>
                             <a class="dropdown-item" href="charity.html">公益</a>
                         </div>
                     </li>
@@ -157,7 +157,9 @@
                 </div>
                 <div class="col-lg-2 col-md-1 col-0"></div>
             </div>
-            <div v-html="apiResult.data.editordata" class="event_content"></div>
+            <div class="event_content" style="display: flex;justify-content: center;">
+                <div v-html="apiResult.data.editordata"></div>
+            </div>
             <!--活動期程
             <div class="row event-flow">
                 <div class="col-lg-2 col-md-1 col-0"></div>
@@ -368,7 +370,7 @@
                         <li class="ft-li2"><a href="art.html">藝文</a></li>
                         <li class="ft-li2"><a href="design.html">設計</a></li>
                         <li class="ft-li2"><a href="edu.html">教育</a></li>
-                        <li class="ft-li2"><a href="green.html">環保</a></li>
+                        <li class="ft-li2"><a href="https://fzios210.github.io/VR360/">環保</a></li>
                         <li class="ft-li2"><a href="charity.html">公益</a></li>
                     </ul>
                 </div>
@@ -395,16 +397,15 @@
         const { reactive } = Vue;
         const app = {
             beforeCreate() {
-                console.log("sadf");
                 sessionStorage.clear();
+            },
+            created() {
             },
             methods: {
                 formatDate(dateString) {
                     const date = dayjs(dateString);
                     return date.format('YYYY/MM/D');
                 }
-            },
-            created() {
             },
             setup() {
                 var apiResult = reactive({
