--- a/art.html
+++ b/art.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-250890082-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-250890082-1');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +60,7 @@
                             <a class="dropdown-item" href="art.html">藝文</a>
                             <a class="dropdown-item" href="design.html">設計</a>
                             <a class="dropdown-item" href="edu.html">教育</a>
-                            <a class="dropdown-item" href="https://fzios210.github.io/VR360/">環保</a>
+                            <a class="dropdown-item" href="green.html">環保</a>
                             <a class="dropdown-item" href="charity.html">公益</a>
                         </div>
                     </li>
@@ -69,18 +78,18 @@
                 <div class="row">
                     <div class="col-lg-2 col-md-1 col-0 c-border"></div>
                     <div class="col-lg-8 col-md-10 col-12 c-title">
-                        <div class="c-title-area">
-                            <h1>藝文</h1>
+                        <div class="c-title-area" data-aos="fade-down" data-aos-duration="1000">
+                            <h1 data-aos="fade-right" data-aos-duration="500" data-aos-delay="400">藝文</h1>
                         </div>
-                        <p>文化素養是一個國家重要的後盾與動力，徐元智紀念基金會從不吝於贊助各項藝文活動，讓更多民間團體能得到豐沛資源，促成願意省思人文精神的智善智美社會。</p>
+                        <p data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">文化素養是一個國家重要的後盾與動力，徐元智紀念基金會從不吝於贊助各項藝文活動，讓更多民間團體能得到豐沛資源，促成願意省思人文精神的智善智美社會。</p>
                     </div>
                     <div class="col-lg-2 col-md-1 col-0"></div>
                 </div>
                 <div class="row">
                     <div class="col-lg-2 col-md-1 col-0 c-border"></div>
                     <div class="col-lg-8 col-md-10 col-12 c-pic-contain01">
-                        <div class="c-pic01"></div>
-                        <div class="c-text01">
+                        <div class="c-pic01" class="c-pic01" data-aos="zoom-in-right" data-aos-duration="500" data-aos-delay="200"></div>
+                        <div class="c-text01" class="c-text01" data-aos="zoom-in-right" data-aos-duration="500" data-aos-delay="300">
                             <h1>發展國家軟實力</h1>
                             <h5>Developing Taiwan’s Soft Power</h5>
                             <p>透過民間企業團體對藝文活動的參與，發揮藝術的無窮影響力，能讓文化的力量更加壯大、提升，成為國家重要的軟實力。</p>
@@ -89,15 +98,15 @@
                             <p>文化是永恆的事業，國家、民族沒有了文化，就喪失了存在的意義。為促進發展具備高度人文素養的現代化社會，徐元智紀念基金會贊助各項藝文活動，例:雲門舞集、雅音小集、明華園歌仔戲劇團、台北愛樂室內管弦樂團等，並高度支持人才培育及5扎根行動。
                             </p>
                         </div>
-                        <h1 class="c-letter">ART</h1>
+                        <h1 data-aos="fade-down" data-aos-delay="200" data-aos-duration="1000" class="c-letter">ART</h1>
                     </div>
                     <div class="col-lg-2 col-md-1 col-0"></div>
                 </div>
                 <div class="row">
                     <div class="col-lg-2 col-md-1 col-0 c-border"></div>
                     <div class="col-lg-8 col-md-10 col-12 c-pic-contain02">
-                        <div class="c-pic02"></div>
-                        <div class="c-text02">
+                        <div class="c-pic02" data-aos="zoom-in-left" data-aos-duration="500" data-aos-delay="200"></div>
+                        <div class="c-text02" data-aos="zoom-in-left" data-aos-duration="500" data-aos-delay="300">
                             <h1>文馨獎</h1>
                             <p>基金會自2000年起連續8屆榮獲行政院文化部頒發的「文馨獎」各項獎項，基金會的工作表現及成果深獲肯定。</p>
                             <p style="margin-top: 1%;">第10屆評審團大獎<br>
@@ -106,7 +115,7 @@
                             <h5>Advocating Arts Education and Fostering Art Appreciation</h5>
                             <p>徐元智先生紀念基金會希望透過對於文教、藝文與建築美學等活動的贊助與支持，將藝術種子散播於各個角落，打造一個真善美的社會。</p>
                         </div>
-                        <h1 class="c-letter2">CULTURE</h1>
+                        <h1 data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200" class="c-letter2">CULTURE</h1>
                     </div>
                     <div class="col-lg-2 col-md-1 col-0"></div>
                 </div>
