--- a/edu.html
+++ b/edu.html
@@ -79,20 +79,17 @@
                     <div class="col-lg-2 col-md-1 col-0 c-border"></div>
                     <div class="col-lg-8 col-md-10 col-12 c-title">
                         <div class="c-title-area" data-aos="fade-down" data-aos-duration="1000">
-                            <h1 data-aos="fade-right" data-aos-duration="500" data-aos-delay="400">公益</h1>
+                            <h1 data-aos="fade-right" data-aos-duration="500" data-aos-delay="400">教育</h1>
                         </div>
-                        <p data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
-                            文化素養是一個國家重要的後盾與動力，徐元智紀念基金會從不吝於贊助各項藝文活動，讓更多民間團體能得到豐沛資源，促成願意省思人文精神的智善智美社會。</p>
+                        <p data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">文化素養是一個國家重要的後盾與動力，徐元智紀念基金會從不吝於贊助各項藝文活動，讓更多民間團體能得到豐沛資源，促成願意省思人文精神的智善智美社會。</p>
                     </div>
                     <div class="col-lg-2 col-md-1 col-0"></div>
                 </div>
                 <div class="row">
                     <div class="col-lg-2 col-md-1 col-0 c-border"></div>
                     <div class="col-lg-8 col-md-10 col-12 c-pic-contain01">
-                        <div class="c-pic01" class="c-pic01" data-aos="zoom-in-right" data-aos-duration="500"
-                            data-aos-delay="200"></div>
-                        <div class="c-text01" class="c-text01" data-aos="zoom-in-right" data-aos-duration="500"
-                            data-aos-delay="300">
+                        <div class="c-pic01" class="c-pic01" data-aos="zoom-in-right" data-aos-duration="500" data-aos-delay="200"></div>
+                        <div class="c-text01" class="c-text01" data-aos="zoom-in-right" data-aos-duration="500" data-aos-delay="300">
                             <h1>發展國家軟實力</h1>
                             <h5>Developing Taiwan’s Soft Power</h5>
                             <p>透過民間企業團體對藝文活動的參與，發揮藝術的無窮影響力，能讓文化的力量更加壯大、提升，成為國家重要的軟實力。</p>
@@ -118,8 +115,7 @@
                             <h5>Advocating Arts Education and Fostering Art Appreciation</h5>
                             <p>徐元智先生紀念基金會希望透過對於文教、藝文與建築美學等活動的贊助與支持，將藝術種子散播於各個角落，打造一個真善美的社會。</p>
                         </div>
-                        <h1 data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200" class="c-letter2">CULTURE
-                        </h1>
+                        <h1 data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200" class="c-letter2">CULTURE</h1>
                     </div>
                     <div class="col-lg-2 col-md-1 col-0"></div>
                 </div>
@@ -205,8 +201,7 @@
                         <li class="ft-li"><a href="news.html">最新消息</a></li>
                         <li class="ft-li"><a href="event.html">焦點活動</a></li>
                         <li class="ft-li"><a href="#">聯絡我們</a></li>
-                        <li class="ft-li"><a href="https://www.feg.com.tw/tw/home/index.aspx" target="_blank">遠東集團</a>
-                        </li>
+                        <li class="ft-li"><a href="https://www.feg.com.tw/tw/home/index.aspx" target="_blank">遠東集團</a></li>
                     </ul>
                     <ul class="ft-ul">
                         <li class="ft-li"><a href="about.html">關於我們</a></li>
@@ -233,7 +228,7 @@
                     <p>copyright｜遠東集團<br>徐元智先生紀念基金會</p>
                 </div>
             </div>
-
+        
         </footer>
     </div>
     <script src="js/jquery-3.5.1.min.js"></script>
